Replace GitHub Issues with email contact

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>アプリに関するご質問、不具合の報告、ご要望などがございましたら、以下の方法でお問い合わせください。</p>
             <ul>
                 <li>App Storeのアプリページからレビューまたは「問題を報告」をご利用ください</li>
-                <li>GitHubの<a href="https://github.com/marco-tn/purine_tracker/issues">Issuesページ</a>からお問い合わせいただくことも可能です</li>
+                <li>メール: <a href="mailto:naminorya@gmail.com">naminorya@gmail.com</a></li>
             </ul>
         </div>
 
