--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>アプリに関するご質問、不具合の報告、ご要望などがございましたら、以下の方法でお問い合わせください。</p>
             <ul>
                 <li>App Storeのアプリページからレビューまたは「問題を報告」をご利用ください</li>
-                <li>メール: <a href="mailto:naminorya@gmail.com">naminorya@gmail.com</a></li>
+                <li>メール: <a href="mailto:naminorya@gmail.com?subject=%E3%80%90%E3%83%97%E3%83%AA%E3%83%B3%E3%82%B1%E3%82%A2%E3%80%91%E3%81%8A%E5%95%8F%E3%81%84%E5%90%88%E3%82%8F%E3%81%9B">naminorya@gmail.com</a></li>
             </ul>
         </div>
 
