--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -7,7 +7,9 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: -apple-system, BlinkMacSystemFont, 'Hiragino Sans', sans-serif; color: #333; background: #fafafa; line-height: 1.8; }
-        .header { background: linear-gradient(135deg, #4CAF50, #2E7D6F); color: white; padding: 40px 20px; text-align: center; }
+        .header { background: linear-gradient(135deg, #4CAF50, #2E7D6F); color: white; padding: 40px 20px; text-align: center; position: relative; }
+        .lang-switch { position: absolute; top: 16px; right: 20px; color: white; text-decoration: none; font-size: 0.9rem; opacity: 0.9; }
+        .lang-switch:hover { opacity: 1; text-decoration: underline; }
         .header h1 { font-size: 1.6rem; }
         .container { max-width: 720px; margin: 0 auto; padding: 40px 20px; }
         h2 { font-size: 1.2rem; margin: 28px 0 12px; color: #2E7D6F; }
@@ -21,6 +23,7 @@
 </head>
 <body>
     <div class="header">
+        <a href="en/terms-of-service.html" class="lang-switch">English</a>
         <h1>利用規約</h1>
     </div>
 
