プロモーションサイトの実装

--- a/en/terms-of-service.html
+++ b/en/terms-of-service.html
@@ -4,26 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service - PurineCare</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; color: #333; background: #fafafa; line-height: 1.8; }
-        .header { background: linear-gradient(135deg, #4CAF50, #2E7D6F); color: white; padding: 40px 20px; text-align: center; position: relative; }
-        .header h1 { font-size: 1.6rem; }
-        .lang-switch { position: absolute; top: 16px; right: 20px; color: white; text-decoration: none; font-size: 0.9rem; opacity: 0.9; }
-        .lang-switch:hover { opacity: 1; text-decoration: underline; }
+        body { font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; color: #333; background: #fafafa; line-height: 1.8; }
+        a { color: #4CAF50; }
+
+        .header {
+            position: fixed; top: 0; left: 0; right: 0; z-index: 100;
+            background: rgba(255,255,255,0.95); backdrop-filter: blur(10px);
+            border-bottom: 1px solid rgba(0,0,0,0.06);
+            padding: 12px 24px;
+            display: flex; align-items: center; justify-content: space-between;
+        }
+        .header-logo { font-size: 1.3rem; font-weight: 700; color: #2E7D6F; text-decoration: none; }
+        .header-nav { display: flex; align-items: center; gap: 20px; }
+        .header-nav a { color: #666; text-decoration: none; font-size: 0.9rem; }
+        .header-nav a:hover { color: #2E7D6F; }
+
+        .page-title {
+            background: linear-gradient(135deg, #4CAF50, #2E7D6F); color: white;
+            padding: 80px 20px 40px; text-align: center;
+        }
+        .page-title h1 { font-size: 1.6rem; }
+
         .container { max-width: 720px; margin: 0 auto; padding: 40px 20px; }
         h2 { font-size: 1.2rem; margin: 28px 0 12px; color: #2E7D6F; }
         p, li { font-size: 0.95rem; margin-bottom: 10px; }
         ul { padding-left: 24px; }
         .updated { text-align: center; color: #888; font-size: 0.85rem; margin-bottom: 32px; }
-        .back { display: inline-block; margin-top: 32px; color: #4CAF50; text-decoration: none; font-weight: bold; }
-        .footer { text-align: center; padding: 40px 20px; color: #888; font-size: 0.85rem; }
-        a { color: #4CAF50; }
+
+        .footer {
+            background: #333; color: rgba(255,255,255,0.7); padding: 40px 24px; text-align: center;
+        }
+        .footer-links { display: flex; justify-content: center; gap: 24px; margin-bottom: 16px; flex-wrap: wrap; }
+        .footer-links a { color: rgba(255,255,255,0.8); text-decoration: none; font-size: 0.85rem; }
+        .footer-links a:hover { color: #fff; }
+        .footer-copy { font-size: 0.8rem; opacity: 0.6; }
     </style>
 </head>
 <body>
-    <div class="header">
-        <a href="../terms-of-service.html" class="lang-switch">日本語</a>
+    <header class="header">
+        <a href="index.html" class="header-logo">PurineCare</a>
+        <nav class="header-nav">
+            <a href="index.html">Home</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="../terms-of-service.html">日本語</a>
+        </nav>
+    </header>
+
+    <div class="page-title">
         <h1>Terms of Service</h1>
     </div>
 
@@ -83,12 +115,16 @@
         <h2>10. Contact Us</h2>
         <p>For inquiries regarding these Terms, please contact us through the App Store app page or the email address below.</p>
         <p>Email: <a href="mailto:naminorya@gmail.com">naminorya@gmail.com</a></p>
-
-        <a href="index.html" class="back">&larr; Back to Home</a>
     </div>
 
-    <div class="footer">
-        <p>&copy; 2025 PurineCare. All rights reserved.</p>
-    </div>
+    <footer class="footer">
+        <div class="footer-links">
+            <a href="index.html">Home</a>
+            <a href="privacy-policy.html">Privacy Policy</a>
+            <a href="terms-of-service.html">Terms of Service</a>
+            <a href="../terms-of-service.html">日本語</a>
+        </div>
+        <p class="footer-copy">&copy; 2025 PurineCare. All rights reserved.</p>
+    </footer>
 </body>
 </html>
